--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ nav .brand-logo {
   width: 100%;
 }
 
-h3 {
+h3, h4 {
   color: #294057;
 }
 
@@ -95,14 +95,14 @@ p {
   }
 
 
-#recipe-button {
+.custom-button {
   background-color: #294057;
   border-radius: 10px;
   border: 2px #DE9C21 solid;
   margin-top: 2em;
 }
 
-#recipe-button:hover {
+.custom-button:hover {
   background-color: #DE9C21;
 }
 
@@ -322,6 +322,25 @@ p {
   line-height: 0;
 }
 
+/*******************/
+/*** background page */
+/********************/
+
+.blog-image-wrapper {
+  width: 20%;
+}
+.blog-image-wrapper img {
+  width: 100%;
+}
+
+.blog-title {
+  padding: 1rem;
+}
+
+.blog-sub-title {
+  padding-left: 1rem;
+}
+
 /* **************** */
 /*  MOBILE STYLES */
 /* **************** */
@@ -365,6 +384,7 @@ p {
 
   /******************/
   /*** recipe page */
+  /******************/
 
   #recipe-start-section .container {
     padding: 3vh 0;
@@ -379,6 +399,15 @@ p {
 
   .material-icons {
     color: #8B0000 !important;
+  }
+
+  /*********************/
+  /*** background page */
+  /*********************/
+
+  .collapsible-header {
+    flex-direction: column;
+    align-items: center;
   }
 }
 
